kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relocation-deployment
  namespace: fk
  labels:
    app: relocation-service
    version: "1.0.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: relocation-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: relocation-service
        version: "1.0.0"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/relocation-service/actuator/prometheus"
    spec:
      restartPolicy: Always
      containers:
        - name: relocation-service
          image: repository.fk.team:5061/repository/docker-release/relocation-service:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http-pod
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "400Mi"
              cpu: "400m"
          livenessProbe:
            httpGet:
              path: /relocation-service/actuator/health/liveness
              port: http-pod
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /relocation-service/actuator/health/readiness
              port: http-pod
            initialDelaySeconds: 40
            timeoutSeconds: 10
            periodSeconds: 20
            failureThreshold: 3
